--- a/app/src/main/res/layout/item_gantt_issue.xml
+++ b/app/src/main/res/layout/item_gantt_issue.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="130dp"
-  android:layout_height="40dp"
-  android:orientation="vertical">
+    android:layout_width="120dp"
+    android:layout_height="40dp"
+    android:orientation="vertical"
+    android:layout_margin="1dp">
 
   <TextView
-    android:id="@+id/tv_issue_name"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="TextView"
-    android:textSize="20sp"
-    android:background="@drawable/borderline" />
+      android:id="@+id/tv_issue_name"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:text="Issue 名稱"
+      android:textSize="12sp"
+      android:textColor="@color/text_primary"
+      android:background="@drawable/gantt_issue_background"
+      android:padding="8dp"
+      android:gravity="center_vertical"
+      android:maxLines="2"
+      android:ellipsize="end" />
 </LinearLayout>
