--- a/app/src/main/res/layout/item_gantt_month.xml
+++ b/app/src/main/res/layout/item_gantt_month.xml
@@ -1,102 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/cardView"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content">
+    android:id="@+id/cardView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="1dp">
 
   <HorizontalScrollView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_weight="10">
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_weight="10">
 
     <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="match_parent"
-      android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
       <View
-        android:id="@+id/v_month1"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month1"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month2"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month2"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month3"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month3"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month4"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month4"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month5"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month5"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month6"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month6"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month7"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month7"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month8"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month8"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month9"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month9"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month10"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month10"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month11"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month11"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
 
       <View
-        android:id="@+id/v_month12"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_weight="1"
-        android:background="@drawable/borderline" />
+          android:id="@+id/v_month12"
+          android:layout_width="50dp"
+          android:layout_height="40dp"
+          android:layout_weight="1"
+          android:background="@drawable/gantt_cell_background" />
     </LinearLayout>
   </HorizontalScrollView>
 </LinearLayout>
