--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,11 @@
   <color name="white">#FFFFFFFF</color>
   <!--這段沒有用，我也不知為何-->
   <color name="myButtonColor">#FFC107</color>
+  <color name="background_light">#F8F9FA</color>
+  <color name="surface_color">#FFFFFF</color>
+  <color name="text_primary">#212121</color>
+  <color name="text_secondary">#757575</color>
+  <color name="primary_color">#2196F3</color>
+  <color name="text_hint">#BDBDBD</color>
+
 </resources>
